Bug 164463 - Master slides sidebar 100 % CPU
Summary: Master slides sidebar 100 % CPU
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Master-Slides
  Show dependency treegraph
 
Reported: 2024-12-26 07:12 UTC by raal
Modified: 2025-03-06 10:22 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2024-12-26 07:12:11 UTC
Description:
freeze, 100 % CPU when use template i Master view.

Steps to Reproduce:
open impress
in dialog Select Template select Freshes template, button Open (or doubleclick)
open sidebar, tab Master slides
double click Metropolis (or other) template in section Available for use

Actual Results:
100 % CPU

Expected Results:
I can continue work


Reproducible: Always


User Profile Reset: No

Additional Info:
Tested Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cac9c7db6257b27724d90d4a355e52e456ef7e08
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

works in Version: 7.3.7.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: cs-CZ
Ubuntu package version: 1:7.3.7-0ubuntu0.22.04.7
Calc: threaded
Comment 1 m_a_riosv 2024-12-26 16:59:28 UTC
Not issue with
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 zcrhonek 2024-12-27 07:46:22 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 2154eccbb1443f9cceb099e68df743bf9845465e is the first bad commit
commit 2154eccbb1443f9cceb099e68df743bf9845465e
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue Oct 22 19:04:20 2024 +0200

    source 235c230cd348600ce7385cc580c45a7be3572704
175369: We don't need a virtual here | https://gerrit.libreoffice.org/c/core/+/175369
Comment 3 Caolán McNamara 2024-12-28 14:53:06 UTC
That's unexpected.
Comment 4 Commit Notification 2024-12-28 21:13:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/960db01dbfe2f916b91782da03532fae1f836445

Resolves: tdf#164463 we need to pass a copy of the LayoutName

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2024-12-28 21:14:18 UTC
fixed in trunk, backport to 25.02 in gerrit
Comment 6 Commit Notification 2025-01-01 07:05:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/440f12e49a66b6c5e3eb7d7520b6f4b307f203e6

Resolves: tdf#164463 we need to pass a copy of the LayoutName

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.