Resolves: tdf#164463 we need to pass a copy of the LayoutName

a reference means it can get updated to rName during the function and
the comparisons fail.

a problem since:

commit 235c230cd348600ce7385cc580c45a7be3572704
CommitDate: Tue Oct 22 09:17:02 2024 +0200

    We don't need a virtual here

Change-Id: I2f4e19ffb21b56f3554837d700977bde45140e42
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179495
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>